<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="8dp"
    android:paddingRight="8dp"
    android:paddingTop="8dp"
    android:background="@drawable/back_bg"
    tools:context=".PlayerActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center|bottom"
        android:text="@string/setPlayerNames"
        android:textColor="@color/colorPrimaryDark"
        android:layout_marginBottom="8dp"
        android:textSize="24sp" />

    <Button
        android:id="@+id/defaults"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:onClick="startPlay"
        android:text="@string/useDefault"
        android:background="@drawable/button_oval_corners"
        android:textColor="@color/colorAccent"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="8dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:layout_gravity="center"
            android:layout_weight="7"
            android:background="#a1a1a1" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="24dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/or"
            android:textColor="#a1a1a1" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:layout_gravity="center"
            android:layout_weight="7"
            android:background="#a1a1a1" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/setPlayerNames"
        android:textColor="@color/colorAccent"
        android:textSize="16sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:gravity="center"
        android:text="@string/secondOptional"
        android:textColor="#808080"
        android:textSize="12sp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal|center_vertical"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/teamA"
                    android:textColor="#000000"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/a_player1"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:hint="@string/firstPlayerA"
                    android:inputType="textPersonName" />

                <EditText
                    android:id="@+id/a_player2"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:hint="@string/secondPlayerA"
                    android:inputType="textPersonName" />
            </LinearLayout>

            <TextView
                android:layout_width="2dp"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                android:background="#a3a3a3"
                android:contentDescription="@string/separator" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/teamB"
                    android:textColor="#000000"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/b_player1"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:hint="@string/firstPlayerB"
                    android:inputType="textPersonName" />

                <EditText
                    android:id="@+id/b_player2"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:hint="@string/secondPlayerB"
                    android:inputType="textPersonName" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/startPlaying"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/startPlaying"
        android:background="@drawable/button_oval_corners2"
        android:textColor="@color/colorPrimaryDark"
        android:onClick="startPlay"
        android:textSize="18sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp">

        <ImageView
            android:id="@+id/img"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:contentDescription="@string/imgSource"
            android:src="@drawable/badminton" />

        <TextView
            android:layout_width="232dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="53dp"
            android:fontFamily="monospace"
            android:shadowColor="@color/colorAccent"
            android:text="@string/quote"
            android:textColor="#a00fa0"
            android:textIsSelectable="false"
            android:textSize="16sp" />

        <ImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_alignBottom="@+id/img"
            android:layout_alignParentStart="true"
            android:layout_marginStart="60dp"
            android:layout_marginBottom="20dp"
            android:src="@drawable/info"
            android:contentDescription="@string/info"

            android:onClick="displayRules"/>
    </RelativeLayout>
</LinearLayout>