<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_img"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="horizontal">
        <!--
    Team A
    -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/teamA"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="20dp"
                android:text="@string/teamA"
                android:textColor="#000000"
                android:textSize="32sp" />

            <TextView
                android:id="@+id/scoreOfA"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="12dp"
                android:text="@string/startingScore"
                android:textColor="#000000"
                android:textSize="56sp" />

            <TextView
                android:id="@+id/player1Name_A"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/firstPlayerA"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/player2Name_A"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/secondPlayerA"
                android:textSize="20sp" />

            <Button
                android:id="@+id/buttonGainA"
                android:layout_width="140dp"
                android:layout_height="48dp"
                android:onClick="incrementA"
                android:background="@drawable/button_oval_corners"
                android:text="@string/gain" />

            <Button
                android:id="@+id/buttonLoseA"
                android:layout_width="140dp"
                android:layout_height="48dp"
                android:layout_margin="8dp"
                android:background="@drawable/button_oval_corners2"
                android:onClick="incrementB"
                android:text="@string/lose" />

        </LinearLayout>

        <!--
    Team B
    -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/teamB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="20dp"
                android:text="@string/teamB"
                android:textColor="#000000"
                android:textSize="32sp" />

            <TextView
                android:id="@+id/scoreOfB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="12dp"
                android:text="@string/startingScore"
                android:textColor="#000000"
                android:textSize="56sp" />

            <TextView
                android:id="@+id/player1Name_B"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/firstPlayerB"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/player2Name_B"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/secondPlayerB"
                android:textSize="20sp" />

            <Button
                android:id="@+id/buttonGainB"
                android:layout_width="140dp"
                android:layout_height="48dp"
                android:background="@drawable/button_oval_corners"
                android:onClick="incrementB"
                android:text="@string/gain" />

            <Button
                android:id="@+id/buttonLoseB"
                android:layout_width="140dp"
                android:layout_height="48dp"
                android:layout_margin="8dp"
                android:background="@drawable/button_oval_corners2"
                android:onClick="incrementA"
                android:text="@string/lose" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/reset"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="click_on_img"
            android:contentDescription="@string/resetDescription"
            android:src="@drawable/reset_icon" />

        <ImageView
            android:id="@+id/undo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="click_on_img"
            android:contentDescription="@string/cancelDescription"
            android:src="@drawable/undo_icon" />

        <ImageView
            android:id="@+id/new_img"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="click_on_img"
            android:contentDescription="@string/newDescription"
            android:src="@drawable/new_icon" />

        <ImageView
            android:id="@+id/exit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/closeDescription"
            android:onClick="click_on_img"
            android:src="@drawable/close_icon"
            android:longClickable="true" />

    </LinearLayout>
</LinearLayout>